--- a/video_4435.html
+++ b/video_4435.html
@@ -88,7 +88,7 @@ $(document).ready(function(){
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
 
-    <h1>Video</h1>
+    <h1>Videos</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -100,7 +100,7 @@ $(document).ready(function(){
 
   <a href="index.html" class="refresh_link ui-link ui-btn-left ui-btn ui-shadow ui-corner-all" data-role="button" rel="external" data-ajax="false" role="button"><img alt="home icon" src="images/home_icon.png"></a>
 
-    <h1>Video</h1>
+    <h1>Videos</h1>
 
     <a class="help_link ui-link ui-btn-right ui-btn ui-shadow ui-corner-all" data-role="button" role="button"><img alt="help icon" src="images/help_icon.png"></a> </div>
 
@@ -116,8 +116,7 @@ $(document).ready(function(){
 
 	
 
-			    <ul data-role="listview"><li><a href='video_detail_689.html'><img src='https://i.ytimg.com/vi/2KQE7dnbIPQ/hqdefault.jpg'  /><h2>Barcelona.VS.Real.Madrid.Full.Match.HD.720p.26/2/2013</h2><p>&Ugrave;&#133;&Oslash;&uml;&Oslash;&sect;&Oslash;&plusmn;&Oslash;&sect;&Oslash;&copy; &Oslash;&plusm</p></a></li><li><a href='video_detail_690.html'><img src='https://i.ytimg.com/vi/LT1oEnaDm-w/hqdefault.jpg'  /><h2>Gareth Bale Amazing Solo Golazo ~ Barcelona 1-2 Real Madrid Final Copa Del Rey</h2><p>Follow on Twitter : @ 101GGFan Gareth Bale Amazing Solo Golazo ~ Barcelona 1-2 Real Madrid Final Cop</p></a></li><li><a href='video_detail_691.html'><img src='https://i.ytimg.com/vi/n4tNVz_ytz8/hqdefault.jpg'  /><h2>Barcelona vs Real Madrid</h2><p>It's Barcelona v Real Madrid - and it's up to you to decide the winner. We've compared their stats, </p></a></li></ul>
-
+			<p class="no_data">No video upload</p>
 
             
 
